app/globals.css
@import "tailwindcss";

:root {
	--color-primary: #f3d58d; 
	--color-secondary: #e59d2c; 
	--color-accent: #2e4365;

		--color-foreground: #141212; 
		--color-background: #ebddc5; 
}

html, body {
	background-color: var(--color-background);
	color: var(--color-foreground);
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	scroll-behavior: smooth;
	scroll-snap-type: none;
}

/* Utility classes */
.bg-primary { background-color: var(--color-primary); }
.bg-secondary { background-color: var(--color-secondary); }
.bg-background { background-color: var(--color-background); }
.bg-accent { background-color: var(--color-accent); }
.text-foreground { color: var(--color-foreground); }
.text-primary { color: var(--color-primary); }
.text-secondary { color: var(--color-secondary); }
.text-accent { color: var(--color-accent); }
.border-primary { border-color: var(--color-primary); }
.border-secondary { border-color: var(--color-secondary); }
.border-accent { border-color: var(--color-accent); }

.font-inter { font-family: var(--font-inter), system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
.font-gtproelium { 
  font-family: var(--font-gtproelium), sans-serif; 
}
.font-altone { 
  font-family: var(--font-altone), sans-serif; 
}
.font-righteous { 
  font-family: var(--font-righteous), sans-serif; 
}
.font-pacifico { font-family: var(--font-pacifico), cursive; }
.font-rubik { font-family: var(--font-rubik), system-ui, -apple-system, "Segoe UI", Roboto; }

.border-retro {
  border-style: solid;
  border-width: 2px 4px 4px 2px;
}

.border-retro-y {
  border-style: solid;
  border-width: 2px 0 4px 0;
}

* {
  scrollbar-width: thin;
  scrollbar-color: #2e4365 transparent;
  scrollbar-gutter: stable;
}

